test/analyze/type_check/traits/incompatible_method_type_errors.myte
module test

trait Trait1 {
  fun foo(x: Int)
  fun bar(x: Int) {}
}

// Incompatible methods error in traits
trait Trait2 {
  extends Trait1
  override fun foo(x: Bool) {}
  override fun bar(x: Bool) {}
}

type Type1 (Unit)
methods Type1 {
  implements Trait1
  override fun foo(x: Bool) {}
  override fun bar(x: Bool) {}
}

// Incompatible method errors from ancestor trait
trait Trait3 { fun foo(x: Int) }
trait Trait4 { extends Trait3 }
trait Trait5 { extends Trait4 }

type Type2 (Unit)
methods Type2 {
  implements Trait5
  override fun foo(x: Bool) {}
}

// Trait object type cannot be overriden by implementing type - no promotion occurs
trait Trait6 {
  fun foo(x: trait Trait1)
}

trait Trait7 {
  extends Trait6
  override fun foo(x: Type1) {}
}

fun main() {}